fixing white space CSS

--- a/client/src/components/AllArtistsPage.css
+++ b/client/src/components/AllArtistsPage.css
@@ -2,7 +2,6 @@
     padding-bottom: 20px;
     padding-top: 5px;
     width: 100%;
-    height: 100vh;
     color: white;
     background: linear-gradient(transparent, rgba(0, 0, 0, 1));
     background-color: rgb(91, 87, 115);
