--- a/client/src/components/Sidebar.css
+++ b/client/src/components/Sidebar.css
@@ -1,5 +1,6 @@
 .sidebar {
     display: flex;
+    min-height: 100vh;
     flex-direction: column;
     flex: 0.1;
     padding-bottom: 60px;
