--- a/client/src/components/SongDetails.css
+++ b/client/src/components/SongDetails.css
@@ -1,7 +1,6 @@
 .song_body {
   padding-bottom: 60px;
   width: 100%;
-  height: 100vh;
   color: white;
   background: linear-gradient(transparent, rgba(0, 0, 0, 1));
   background-color: rgb(91, 87, 115);
